--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
-    "python:dev": "yarn build && .\\env\\Scripts\\activate && python .\\backend\\index.py DEBUG",
+    "python:dev": "start /B yarn dev && .\\env\\Scripts\\activate && python .\\backend\\index.py DEBUG",
     "python:build": "yarn build && .\\env\\Scripts\\activate && pyinstaller --distpath executables --workpath py_build index.spec",
     "lint": "eslint .",
     "preview": "vite preview"
